methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:6: error: not found: value cnt
    while(isFacingTrail()&&cnt)
                           ^SlugHunting:13: error: not found: value cnt
    while(!isFacingTrail()&&cnt)
                            ^