methods.slug.SlugHunting.scala.code
def hunt() {
  while(!estSurBiscuit())
  {
    var ctn = true
    while(isFacingTrail()&&cnt)
    {
      avance()
      marque()
      if(estSurBiscuit())
      	ctn = false
    }
    while(!isFacingTrail()&&cnt)
      droite()
  }
  prendBiscuit()
}

def marque()
{
  baisseBrosse()
  leveBrosse()
}

def isFacingTrail():Boolean = {
  var b = false  
  if(estFaceMur())
  	return false
  avance()
  b = (getCouleurSol()==Color.green)
  recule()
  return b
}
